@@ -252,7 +252,7 @@ else
   ;;
   avr5) avrlib_cflags=${avrlib_opt_speed}
         avrlib_asflags='-mmcu=atmega161'
-        AVR_CRT_MEGA='crtm161.o crtm162.o crtm163.o crtm169.o crtm323.o crtm128.o # crtm16.o crtm32.o crtm64.o'
+        AVR_CRT_MEGA='crtm161.o crtm162.o crtm163.o crtm169.o crtm323.o crtm128.o crtm16.o # crtm32.o crtm64.o'
         AVR_CRT_OTHER='crtat94k.o'
   ;;
   *)    AC_MSG_ERROR(unexpected value '${with_multisubdir}' for with_multisubdir)
